--- a/apps/ledger-live-mobile/src/locales/ar/common.json
+++ b/apps/ledger-live-mobile/src/locales/ar/common.json
@@ -87,7 +87,8 @@
     "popular" : "شائع",
     "getSupport" : "احصل على الدعم",
     "comingSoon" : "قريباً",
-    "restart" : "إعادة التشغيل"
+    "restart" : "إعادة التشغيل",
+    "loadMore" : "Load more"
   },
   "errors" : {
     "countervaluesUnavailable" : {
@@ -811,6 +812,13 @@
       "title" : "جهازك مقفل",
       "description" : "قم بإلغاء قفل جهازك وحاول مرة أخرى.",
       "descriptionWithProductName" : "قم بإلغاء قفل {{ productName }} خاصتك وحاول مرة أخرى."
+    },
+    "EtherscanAPIError" : {
+      "title" : "فشل إحضار المعاملات",
+      "description" : "حدث خطأ غير متوقع مع المستكشفات. يُرجى إعادة المحاولة لاحقاً"
+    },
+    "GasEstimationError" : {
+      "title" : "فشل تقدير الغاز"
     }
   },
   "crash" : {
@@ -1117,6 +1125,10 @@
       "learn" : {
         "title" : "تعلّم",
         "desc" : "تعرّف على الأصول المشفرة وويب 3.0 والأمان الرقمي وغير ذلك الكثير"
+      },
+      "news" : {
+        "title" : "الأخبار",
+        "desc" : "Learn about crypto, security, web3 and catch up with latest news"
       },
       "ledgerApps" : {
         "title" : "التطبيقات",
@@ -1653,6 +1665,10 @@
             "label" : "تحقق مما إذا كان قد تم اكتشاف Nano X الخاصة بك."
           }
         }
+      },
+      "protectConnectionInformationModal" : {
+        "title" : "لماذا لا أستطيع جهازي Ledger؟",
+        "description" : "إذا كنت تواجه مشكلات في الاتصال بـ Ledger Live للجوّال بعد أن قمت بتمكين البلوتوث على جهازك Ledger، يمكنك اتباع التعليمات بالنقر على زر \"Learn how to fix that (تعلم كيفية إصلاح ذلك)\" أدناه"
       }
     },
     "stepImportAccounts" : {
@@ -3298,6 +3314,10 @@
           }
         }
       }
+    },
+    "walletConnect" : {
+      "title" : "WalletConnect",
+      "description" : "قم بتوصيل محفظتك بالتطبيقات اللامركزية"
     }
   },
   "signMessage" : {
@@ -3419,6 +3439,15 @@
         "description" : "الحد الأقصى للمبلغ القابل للإنفاق هو إجمالي الرصيد في الحساب المتاح للإرسال في معاملة."
       }
     }
+  },
+  "editTransaction" : {
+    "header" : "تعديل المعاملة",
+    "stuckTx" : "أحدث معاملة \"إرسال\" لك عالقة. قم بتسريع المعاملة برسوم شبكة أعلى أو قم بإلغائها.",
+    "speedupTxMessage" : "معاملتك جارية. يمكنك تسريعها برسوم شبكة أعلى أو إلغائها.",
+    "speedupOrCancel" : "التسريع أو الإلغاء",
+    "resubmitTxDescription" : "أعد إرسال المعاملة برسوم شبكة أعلى.",
+    "cancelTxDescription" : "إرسال 0 ETH إلى عنوانك. لضمان الإلغاء، رسوم الشبكة تكون أعلى بنسبة 10-30% من رسوم المعاملة المراد إلغاؤها.",
+    "currentNetworkFee" : "رسوم الشبكة الحالية = {{amount}} ETH"
   },
   "requestAccount" : {
     "stepperHeader" : {
@@ -6077,5 +6106,10 @@
         "emptyPassword" : "لا يمكن أن تكون كلمة المرور فارغة"
       }
     }
+  },
+  "newsfeed" : {
+    "title" : "Newsfeed",
+    "poweredByCryptopanic" : "Powered by Cryptopanic",
+    "noPosts" : "No posts available currently"
   }
 }
