File apps/ledger-live-mobile/src/locales/en/common.json was translated to ar-AE locale

--- a/apps/ledger-live-mobile/src/locales/ar/common.json
+++ b/apps/ledger-live-mobile/src/locales/ar/common.json
@@ -1268,7 +1268,13 @@
       "recovery" : "لديك عبارة استرداد بالفعل؟",
       "protect" : {
         "label" : "60 دقيقة تقريباً",
-        "subTitle" : "الاستعادة عن طريق Protect"
+        "subTitle" : "الاستعادة عن طريق Protect",
+        "drawer" : {
+          "title" : "استخدم Nano X",
+          "desc" : "إطلاق Ledger Recover الأولي حصري لـ Ledger Nano X",
+          "buyNanoX" : "شراء Ledger Nano X",
+          "discoverBenefits" : "اكتشف المزايا"
+        }
       }
     },
     "stepNewDevice" : {
